# article-db-api

./: .env.example  README.md  api.py  database.py  main.py  models.py  pyproject.toml
db/: init.sql
