[project]
name = "article-db-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "mysql-connector-python>=8.2.0",
    "pydantic>=2.4.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
]
